# Prover-finetune

./: .gitignore  README.md  pyproject.toml  requirements.quantization.txt  requirements.txt
FLRQ/: bloom.py  datautils.py  get_calib_data.py  get_scale_quant.py  llama.py  make_clip.py  opt.py  quantizer.py  qwen.py  r1_sketch.py  run_awq_quantize.py  run_quantize.py  sketch_test.sh  utils.py
configs/: experiment.deepseek_prover_v2_7b.pass16.yaml  experiment.deepseek_prover_v2_7b.small_pass4.yaml  experiment.example.yaml  finetune.example.yaml  lean_project.example.yaml
data/minif2f/processed/: test.json  valid.json
docs/: lean-mathlib-config.md
scripts/: analyze_numinamath_lean.py  bootstrap_env.py  extract_minif2f_lean_to_json.py  extract_numinamath_reasoning.py  filter_numinamath_lean.py  setup_mathlib4.py
src/prover_finetune/: __init__.py
src/prover_finetune/experiments/: __init__.py  config.py  lean_checker.py  minif2f.py  prover.py  run_experiment.py
src/prover_finetune/finetune/: __init__.py  config.py  data.py  merge_qlora_adapter.py  train_qlora.py
test/: README.md  test_data_formatting.py  test_parallel_lean_verification.py  test_parallel_lean_verification_integration.py
