[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prover-finetune"
version = "0.1.0"
description = "QLoRA finetune and Lean miniF2F experiment framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lean-interact>=0.9.0",
    "kimina-client",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
